@@ -10,6 +10,7 @@ CHANGELOG Roundcube Webmail
 - Fix so adding CC/BCC recipients from the sidebar unhides compose form fields in Classic skin (#1490472)
 - Fix so gc.sh script removes also expired sessions from sql database (#1490512)
 - Fix support for Mozilla-based browsers, e.g. Pale Moon (#1490517)
+- Fix various issues with Turkish (and similar) locales (#1490519)
 
 RELEASE 1.0.6
 -------------
